# rust-http-server

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: impl.rs  mod.rs  types.rs
src/parsing/: mod.rs  parse_common.rs  parse_type.rs
src/server/: format_response.rs  handle_connection.rs  handle_get.rs  mod.rs  request_processor.rs  startup.rs
tests/integration/: http_server_connection_tests.rs
tests/integration/common/: utils.rs
tests/integration/sample_requests/: get.txt  invalid.txt  post.txt
