[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "1.1.0", features = ["full"]}
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = "0.11"

[[test]]
name = "integration_tests"
path = "tests/integration/http_server_connection_tests.rs"

[[bin]]
name = "rust_http_server"
path = "src/main.rs"